--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
     <p>Today is all about celebrating you—your courage, your compassion, and every dream you’ve chased down and brought to life.</p>
   
-    <p>Watching you finishing two rounds of nursing programs and step into that role—caring for others even on the toughest days—fills, both physically and mentally. You’ve faced challenges of your own yet still show up as a healer, and a source of comfort for those in need.</p>
+    <p>Watching you finishing two rounds of nursing programs and step into that role—caring for others even on the toughest days, both physically and mentally. You’ve faced challenges of your own yet still show up as a healer, and a source of comfort for those in need.</p>
   
     <p>Your strength inspires me every single day. You prove that with determination and a kind heart, there’s nothing you can’t achieve.</p>
   
@@ -37,7 +37,7 @@
 
     <p>Poppy and I are lucky to have you as my partner and as her Dog Mom. Your love, your care, and your gentle strength make our little family feel complete.</p>
   
-    <p class="signature">❤️ Forever proud of you, love you always,<br>Randall</p>
+    <p class="signature">❤️ Forever proud of you and love you always,<br>Randall</p>
   </div>
   
 
