--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
     Your browser does not support HTML5 video.
   </video>
 
-  <!-- Card Content -->
-  <div class="card">
+  <!-- 1. Open Message Button -->
+  <button id="open-btn" class="open-button">Open Birthday Message</button>
+
+  <!-- 2. Card Content (hidden by default) -->
+  <div class="card" id="card-content" style="display: none;">
     <h1>Happy Birthday, Kaye! 🎉</h1>
   
     <p>Today is all about celebrating you—your courage, your compassion, and every dream you’ve chased down and brought to life.</p>
@@ -39,7 +42,8 @@
   
     <p class="signature">❤️ Forever proud of you and love you always,<br>Randall</p>
   </div>
-  
 
+  <!-- Your interaction script -->
+  <script src="script.js"></script>
 </body>
 </html>
