--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="card" id="card-content" style="display: none;">
     <h1>Happy Birthday, Kaye! 🎉</h1>
   
-    <p>Today is all about celebrating you—your courage, your compassion, and every dream you’ve chased down and brought to life.</p>
+    <p>Today is all about celebrating you, and every dream you’ve chased down and brought to life.</p>
   
     <p>Watching you finishing two rounds of nursing programs and step into that role—caring for others even on the toughest days, both physically and mentally. You’ve faced challenges of your own yet still show up as a healer, and a source of comfort for those in need.</p>
   
@@ -36,9 +36,9 @@
   
     <p>As you enter this next year, I know you’ll keep growing, learning, and making your dreams reality—one milestone at a time #lexus.</p>
   
-    <p>Through every triumph and every hurdle, I’m here to cheer you on, to lift you up, and to stand by your side.</p>
+    <p>Through every challenge, I’m here to cheer you on, to lift you up, and to stand by your side.</p>
 
-    <p>Poppy and I are lucky to have you as my partner and as her Dog Mom. Your love, your care, and your gentle strength make our little family feel complete.</p>
+    <p>Poppy and I are lucky to have you as my partner and as her Dog Mom. Your make our little family feel complete.</p>
   
     <p class="signature">❤️ Forever proud of you and love you always,<br>Randall</p>
   </div>
