--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
     <p>Through every challenge, I’m here to cheer you on, to lift you up, and to stand by your side.</p>
 
-    <p>Poppy and I are lucky to have you as my partner and as her Dog Mom. Your make our little family feel complete.</p>
+    <p>Poppy and I are lucky to have you as my partner and as her Dog Mom. You make our little family feel complete.</p>
   
     <p class="signature">❤️ Forever proud of you and love you always,<br>Randall</p>
   </div>
